Update Privacy Policy: disclose email collection and account deletion feature

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,6 +89,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -96,68 +98,96 @@
         </header>
 
         <section>
-            <p><strong>InfinityMmedia</strong> ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our mobile application and web platform (the "Ai CV Builder" or "App").</p>
-            
-            <p>Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the application.</p>
+            <p><strong>InfinityMmedia</strong> ("we," "our," or "us") is committed to protecting your privacy. This
+                Privacy Policy explains how we handle your information when you use our mobile application and web
+                platform (the "Ai CV Builder" or "App").</p>
+
+            <p>Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy,
+                please do not access the application.</p>
         </section>
 
         <section>
-            <h2>1. Information We Collect (Or Don't Collect)</h2>
-            <p>Our core philosophy is Local-First Privacy. We believe your professional resume data belongs to you.</p>
+            <h2>1. Information We Collect</h2>
+            <p>Our goal is to provide a powerful CV building experience while respecting your privacy. We collect very
+                limited data to enable core features.</p>
 
-            <h3>A. Your CV Data is Saved Locally</h3>
+            <h3>A. Information You Provide Directly</h3>
             <ul>
-                <li>We do not collect, store, or transmit your personal CV information (such as your name, contact details, work experience, or education) to any database owned by us.</li>
-                <li>All data you type into the application is saved locally on your device's browser/storage (LocalStorage).</li>
-                <li>There are no mandatory user accounts required to use the standard features of the App.</li>
+                <li><strong>Account Information (Email):</strong> To enable cloud syncing, account recovery, and the
+                    coin-based system across devices, we collect and store your email address when you sign up or log
+                    in. This is the only piece of personal authentication data we store on our servers.</li>
+                <li><strong>CV Content:</strong> All personal data you type into your resumes (name, work experience,
+                    etc.) is primarily saved locally on your device. However, if you are signed in, this data may be
+                    synced to your private account to allow you to continue work on other devices.</li>
             </ul>
 
             <h3>B. Automatically Collected Information</h3>
-            <p>When you access the App, certain third-party services we use may automatically collect non-personal device information:</p>
+            <p>When you access the App, certain third-party services we use may automatically collect non-personal
+                device information:</p>
             <ul>
                 <li><strong>Device Data:</strong> Device type, operating system, unique device identifiers.</li>
                 <li><strong>Usage Data:</strong> Anonymous interaction events to help us improve the App's UI/UX.</li>
             </ul>
 
             <h3>C. Third-Party Data Collection & Integrations</h3>
-            <p>Our application integrates with third-party software development kits (SDKs) to provide functionality and display advertisements:</p>
+            <p>Our application integrates with third-party software development kits (SDKs) to provide functionality and
+                display advertisements:</p>
             <ul>
-                <li><strong>Google AdMob:</strong> We display advertisements via Google AdMob on mobile devices. AdMob may collect and process certain device data and ad interaction data to provide relevant ads. We encourage you to review Google's Privacy Policy regarding personalized advertising.</li>
-                <li><strong>Google Gemini & OpenAI:</strong> If you use our AI features (e.g., PDF parsing, text translation, or cover letter generation), the specific text you submit is sent securely to these APIs for processing. This data is transmitted statelessly via secure Edge Functions. We do not store this data, nor is your data used by OpenAI or Google to train their foundation AI models.</li>
+                <li><strong>Google AdMob:</strong> We display advertisements via Google AdMob on mobile devices. AdMob
+                    may collect and process certain device data and ad interaction data to provide relevant ads. We
+                    encourage you to review Google's Privacy Policy regarding personalized advertising.</li>
+                <li><strong>Google Gemini & OpenAI:</strong> If you use our AI features (e.g., PDF parsing, text
+                    translation, or cover letter generation), the specific text you submit is sent securely to these
+                    APIs for processing. This data is transmitted statelessly via secure Edge Functions. We do not store
+                    this data, nor is your data used by OpenAI or Google to train their foundation AI models.</li>
             </ul>
         </section>
 
         <section>
             <h2>2. How We Use the Information</h2>
-            <p>Because your CV data remains on your local device, we do not use your personal information. The automated data collected by our third-party SDKs (like AdMob) is used to:</p>
+            <p>We use your information for the following purposes:</p>
             <ul>
-                <li>Deliver targeted advertising to keep the app free.</li>
-                <li>Provide, operate, and maintain the App's core functionality.</li>
+                <li><strong>Authentication:</strong> Using your email to verify your identity and manage your account.
+                </li>
+                <li><strong>Feature Delivery:</strong> To operate and maintain the App's core functionality, including
+                    AI resume generation.</li>
+                <li><strong>Monetization:</strong> Deliver targeted advertising via AdMob to keep the standard App
+                    features free.</li>
             </ul>
         </section>
 
         <section>
             <h2>3. Disclosure of Information</h2>
-            <p>We do not sell your personal data to anyone, because we do not collect or possess it.</p>
-            <p>Data transmitted for AI processing (to Google and OpenAI) is strictly for the fulfillment of the user's request and is governed by strict enterprise data privacy rules preventing training on user API inputs.</p>
+            <p>We do not sell your personal data to anyone. Data is only shared with service providers (like
+                Google/OpenAI) strictly for the fulfillment of the user's request and is governed by strict enterprise
+                data privacy rules.</p>
         </section>
 
         <section>
             <h2>4. Policy for Children</h2>
-            <p>We do not knowingly solicit information from or market to children under the age of 13. If you believe a child under 13 has inadvertently provided personal information to third-party SDKs in our app, please contact us.</p>
+            <p>We do not knowingly solicit information from or market to children under the age of 13. If you believe a
+                child under 13 has inadvertently provided personal information to third-party SDKs in our app, please
+                contact us.</p>
         </section>
 
         <section>
-            <h2>5. Your Data Rights</h2>
-            <p>Because all of your generated CV data is stored locally on your own device, you have complete control over it.</p>
+            <h2>5. Your Data Rights & Deletion</h2>
+            <p>You have complete control over your data and account.</p>
             <ul>
-                <li><strong>Deletion:</strong> You can permanently delete your data at any time by clearing your browser/app data or pressing the "Reset/Clear Data" buttons within the App. This destroys the data immediately as it exists nowhere else.</li>
+                <li><strong>In-App Deletion:</strong> You can permanently delete your account and all associated data at
+                    any time. Inside the App, go to <strong>Settings -> Security & Data</strong> and press
+                    <strong>"Delete Account & Data"</strong>. This will immediately and permanently purge your email,
+                    coin balance, and synced documents from our servers and your local device.</li>
+                <li><strong>Local Deletion:</strong> You can also clear your data locally by clearing your browser/app
+                    cache.</li>
             </ul>
         </section>
 
         <section>
             <h2>6. Changes to This Privacy Policy</h2>
-            <p>We reserve the right to modify this Privacy Policy at any time. Any changes will be effective immediately upon the posting of the revised Privacy Policy. We encourage you to review this Privacy Policy periodically.</p>
+            <p>We reserve the right to modify this Privacy Policy at any time. Any changes will be effective immediately
+                upon the posting of the revised Privacy Policy. We encourage you to review this Privacy Policy
+                periodically.</p>
         </section>
 
         <section class="contact-info">
@@ -171,4 +201,5 @@
         </section>
     </div>
 </body>
+
 </html>
